--- a/requirements.txt
+++ b/requirements.txt
@@ -72,7 +72,7 @@ pystan==2.19.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==5.4.1
-requests==2.31.0
+requests
 rich==13.6.0
 scikit-learn==1.3.2
 scipy==1.11.3
