--- a/requirements.txt
+++ b/requirements.txt
@@ -80,7 +80,7 @@ pystan==2.19.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==5.4.1
-requests==2.4.3
+requests==2.31.0
 rich==13.6.0
 scikit-learn==1.3.2
 scipy==1.11.3
@@ -102,6 +102,7 @@ tqdm==4.66.1
 typing_extensions==4.8.0
 tzdata==2023.3
 tzlocal==5.2
+updates==0.1.7.1
 urllib3==1.26.12
 validators==0.22.0
 virtualenv==20.16.3
