--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 altair==5.1.2
 appdirs==1.4.4
 attrs==22.1.0
-awsebcli==3.20.3
+# awsebcli==3.20.3
 bcrypt==4.0.0
 beautifulsoup4==4.12.2
 blessed==1.19.1
@@ -23,9 +23,9 @@ cryptography==37.0.4
 cycler==0.12.1
 Cython==3.0.4
 distlib==0.3.6
-docker==4.4.4
-docker-compose==1.25.5
-dockerpty==0.4.1
+# docker==4.4.4
+# docker-compose==1.25.5
+# dockerpty==0.4.1
 docopt==0.6.2
 ephem==4.1.5
 filelock==3.8.0
@@ -80,7 +80,7 @@ pystan==2.19.1.1
 python-dateutil==2.8.2
 pytz==2023.3.post1
 PyYAML==5.4.1
-requests==2.31.0
+requests
 rich==13.6.0
 scikit-learn==1.3.2
 scipy==1.11.3
