--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ cmdstanpy==0.9.5
 colorama==0.4.3
 # contourpy==1.1.1
 convertdate==2.4.0
-coverage==7.3.2
+# coverage==7.3.2
 cryptography==37.0.4
 cycler==0.12.1
 Cython==3.0.4
