--- a/requirements.txt
+++ b/requirements.txt
@@ -1,113 +1,211 @@
-# altair==5.1.2
-appdirs==1.4.4
-attrs==22.1.0
-# awsebcli==3.20.3
-bcrypt==4.0.0
-beautifulsoup4==4.12.2
-blessed==1.19.1
-blinker==1.6.3
-botocore==1.23.54
-cached-property==1.5.2
-cachetools==5.3.1
-cement==2.8.2
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.0.12
-click==8.1.7
+awsebcli==3.20.3
+├──
+│
+│
+├──
+│
+│
+│
+│
+├──
+├──
+├──
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+├──
+├──
+├──
+│
+├──
+├──
+│
+│
+│
+│
+├──
+├──
+├──
+├──
+├──
+└──
 cmdstanpy==0.9.5
-colorama==0.4.3
-# contourpy==1.1.1
+├──
+└──
 convertdate==2.4.0
-# coverage==7.3.2
-cryptography==37.0.4
-cycler==0.12.1
-Cython==3.0.4
-distlib==0.3.6
-# docker==4.4.4
-# docker-compose==1.25.5
-# dockerpty==0.4.1
-docopt==0.6.2
-ephem==4.1.5
-filelock==3.8.0
-flake8==6.1.0
-fonttools==4.43.1
-frozendict==2.3.8
-future==0.16.0
-gitdb==4.0.11
-GitPython==3.1.40
+└──
 holidays==0.35
-html5lib==1.1
-idna==3.3
-importlib-metadata==6.8.0
-Jinja2==3.1.2
-jmespath==0.10.0
-joblib==1.3.2
-jsonschema==3.2.0
-kiwisolver==1.4.5
+└──
 LunarCalendar==0.0.9
-lxml==4.9.3
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
+├──
+├──
+│
+└──
 matplotlib==3.8.0
-mccabe==0.7.0
-mdurl==0.1.2
-mock==5.1.0
-multitasking==0.0.11
-nose==1.3.7
-numpy==1.26.1
-packaging==23.2
-pandas==2.1.1
+├──
+│
+├──
+├──
+├──
+├──
+├──
+├──
+├──
+└──
 paramiko==2.11.0
-pathspec==0.9.0
-patsy==0.5.3
-peewee==3.17.0
-Pillow==10.1.0
+├──
+├──
+│
+│
+├──
+│
+│
+└──
 pip-conflict-checker==0.6.0
-platformdirs==2.5.2
+├──
+├──
+│
+│
+│
+├──
+├──
+└──
+pipdeptree==2.13.0
 plotly==5.17.0
-protobuf==4.24.4
-pyarrow==13.0.0
-pycodestyle==2.11.1
-pycparser==2.21
-pydeck==0.8.1b0
-pyflakes==3.1.0
-Pygments==2.16.1
-PyMeeus==0.5.12
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyrsistent==0.18.1
+├──
+└──
 pystan==2.19.1.1
-python-dateutil==2.8.2
-pytz==2023.3.post1
-PyYAML==5.4.1
-requests
-rich==13.6.0
+├──
+└──
 scikit-learn==1.3.2
-scipy==1.11.3
-semantic-version==2.8.5
+├──
+├──
+├──
+│
+└──
 setuptools-git==1.2
-six==1.14.0
-smmap==5.0.1
-soupsieve==2.5
 statsmodels==0.14.0
+├──
+├──
+├──
+│
+│
+│
+│
+│
+├──
+│
+│
+└──
 streamlit==1.27.2
-tenacity==8.2.3
-termcolor==1.1.0
-texttable==1.6.4
-threadpoolctl==3.2.0
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.3
+├──
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+│
+├──
+├──
+├──
+├──
+│
+│
+├──
+│
+├──
+├──
+├──
+│
+│
+│
+│
+│
+├──
+├──
+├──
+│
+├──
+│
+│
+│
+├──
+│
+├──
+│
+│
+│
+│
+├──
+│
+│
+│
+├──
+├──
+├──
+├──
+├──
+└──
 tqdm==4.66.1
-typing_extensions==4.8.0
-tzdata==2023.3
-tzlocal==5.2
 updates==0.1.7.1
-urllib3==1.26.12
-validators==0.22.0
 virtualenv==20.16.3
-wcwidth==0.1.9
-webencodings==0.5.1
-websocket-client==0.59.0
+├──
+├──
+└──
+wheel==0.37.1
 yfinance==0.2.31
-zipp==3.17.0
+├──
+├──
+│
+├──
+├──
+│
+│
+├──
+├──
+├──
+├──
+│
+│
+│
+│
+│
+├──
+├──
+└──
