--- a/requirements.txt
+++ b/requirements.txt
@@ -1,211 +1,20 @@
-awsebcli==3.20.3
-├──
-│
-│
-├──
-│
-│
-│
-│
-├──
-├──
-├──
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-├──
-├──
-├──
-│
-├──
-├──
-│
-│
-│
-│
-├──
-├──
-├──
-├──
-├──
-└──
+# awsebcli==3.20.3
 cmdstanpy==0.9.5
-├──
-└──
 convertdate==2.4.0
-└──
 holidays==0.35
-└──
 LunarCalendar==0.0.9
-├──
-├──
-│
-└──
 matplotlib==3.8.0
-├──
-│
-├──
-├──
-├──
-├──
-├──
-├──
-├──
-└──
 paramiko==2.11.0
-├──
-├──
-│
-│
-├──
-│
-│
-└──
 pip-conflict-checker==0.6.0
-├──
-├──
-│
-│
-│
-├──
-├──
-└──
 pipdeptree==2.13.0
 plotly==5.17.0
-├──
-└──
 pystan==2.19.1.1
-├──
-└──
 scikit-learn==1.3.2
-├──
-├──
-├──
-│
-└──
 setuptools-git==1.2
 statsmodels==0.14.0
-├──
-├──
-├──
-│
-│
-│
-│
-│
-├──
-│
-│
-└──
 streamlit==1.27.2
-├──
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-│
-├──
-├──
-├──
-├──
-│
-│
-├──
-│
-├──
-├──
-├──
-│
-│
-│
-│
-│
-├──
-├──
-├──
-│
-├──
-│
-│
-│
-├──
-│
-├──
-│
-│
-│
-│
-├──
-│
-│
-│
-├──
-├──
-├──
-├──
-├──
-└──
 tqdm==4.66.1
 updates==0.1.7.1
 virtualenv==20.16.3
-├──
-├──
-└──
 wheel==0.37.1
 yfinance==0.2.31
-├──
-├──
-│
-├──
-├──
-│
-│
-├──
-├──
-├──
-├──
-│
-│
-│
-│
-│
-├──
-├──
-└──
